added jquery calendar 'fullcalendar' via gem. currently displaying on autowash show page. intend to create shifts by clicking the calendar

--- a/autowash_scheduler/Gemfile
+++ b/autowash_scheduler/Gemfile
@@ -39,6 +39,10 @@ gem 'spring',        group: :development
 # gem 'debugger', group: [:development, :test]
 
 gem "sorcery"
+
 gem 'pry-rails', :group => :development
 
 gem 'business_time'
+
+gem 'fullcalendar-rails'
+gem 'momentjs-rails'
